Replace GHashTable by struct hash_table from brpc However, does not link yet because of multiple definitions.

--- a/libcore/arch/linux/builtin-modules/on-access/Makefile.am
+++ b/libcore/arch/linux/builtin-modules/on-access/Makefile.am
@@ -26,7 +26,7 @@ watchdog.h
 
 on_access_linux_la_LDFLAGS= -module -avoid-version
 on_access_linux_la_LIBADD= @GLIB2_LIBS@ @GIO2_LIBS@
-on_access_linux_la_CFLAGS= -I$(top_srcdir)/libmodule/include -I$(top_srcdir) @GLIB2_CFLAGS@ @GIO2_CFLAGS@
+on_access_linux_la_CFLAGS= -I$(top_srcdir)/libmodule/include -I$(top_srcdir) @GLIB2_CFLAGS@ @GIO2_CFLAGS@ -I$(top_srcdir)/librpc/brpc
 
 install-exec-hook:
 	-rm -f "$(DESTDIR)$(modulesdir)"/on-access-linux.la "$(DESTDIR)$(modulesdir)"/on-access-linux.a
