Move configuration files to respective platform directories

--- a/conf/Makefile.am
+++ b/conf/Makefile.am
@@ -1,16 +1,1 @@
-armaditoconfdir=$(sysconfdir)/armadito
-armaditoconf_DATA=armadito.conf
-
-EDIT = sed \
-        -e 's,@sysconfdir\@,$(sysconfdir),g' \
-        -e 's,@localstatedir\@,$(localstatedir),g' 
-
-%.conf: Makefile $(srcdir)/%.conf.in
-	rm -f $*.conf $*.conf.tmp
-	$(EDIT) $(srcdir)/$*.conf.in >$*.conf.tmp
-	mv $*.conf.tmp $*.conf
-
-EXTRA_DIST=armadito.conf.in
-
-CLEANFILES=armadito.conf
-
+SUBDIRS=linux
